Give each doc one job, and stop saying things three times
GETTING-STARTED.md was added as *the* operating path, but the walkthroughs it
replaced were never retired, so the same journey was told three times and
nothing recorded which doc owned what. Write the boundary down and enforce it:
Getting Started owns the operating path, README the operator surface (what to
type, what to configure), Architecture the code (why it is shaped this way,
what must not break). A topic with both an operator and a code side is split
along that line rather than told twice.

Overlap removed: README's "happy path" becomes a step -> reference index and
ARCHITECTURE's walkthrough a pointer; the execution engine stops being told
twice in full, including two copies of the cash-mechanics table and of every
load-bearing quirk; the Feature cache section, which restated two other
places, is deleted; the ports table drops from ARCHITECTURE; CLI flag lists
leave ARCHITECTURE for README's table; the drop-folder grammar, model cache
and chunk-interval rationale each split along the operator/code line. The one
thing README had that ARCHITECTURE lacked, the signal -> effect table, moved
into the bar-loop section rather than being dropped.

Gaps closed. A rollup goes stale where you cannot see it: `run` builds a
missing timeframe but never refreshes an existing one, so importing more daily
candles leaves a W1 backtest silently reading the old rollup -- Getting Started
said only "the run builds the rollup first", and now states the rule, gives the
rebuild command, and carries a troubleshooting row. tools/datagen/ was
unreferenced by every project doc although every candle source they describe
produces daily bars, leaving a reader wanting M30 nowhere to go. README claimed
aggregation has four entry points and listed four, omitting `aggregate` -- the
only way to refresh a rollup that already has rows.

ARCHITECTURE's `#### Compression` heading was empty: all three of its
paragraphs sat under the `Java -> 